# nano-drone

./: .gitignore  .gitmodules
Code/: notes.md  radio_miso  radio_mosi
Code/nano-robot/: .gitignore  CMakeLists.txt  debug.sh  libopencm3.cmake  main.c  stm32f0-openocd.cfg
Code/nano-robot/libopencm3/: stm32f0.ld
Code/nano-robot/src/: FreeRTOSConfig.h  asservissement.c  asservissement.h  filters.c  hardware.c  hardware.h  ledsTask.c  ledsTask.h  main.c  math_utils.c  math_utils.h  music.c  music.h  pid.c  pid.h  radioTask.c  radioTask.h  sixAxisTask.c  sixAxisTask.h  videoTask.c  videoTask.h
Code/nano-robot/src/hardware/: eeprom.c  eeprom.h  hardware.c  hardware.h  leds.c  leds.h  motors.c  motors.h  mpu.c  mpu.h  mpu_MPU-6052C.h  radio.c  radio.h  radio_xn297.h  video.c  video.h
Code/nano-robot/src/hardware/HAL/: main_i2c.c  main_i2c.h  stm32f0xx_hal.c  stm32f0xx_hal_conf.h  stm32f0xx_hal_i2c.c  stm32f0xx_hal_i2c.h  stm32f0xx_hal_msp.c
Presentation/: Makefile  TOGET-TODO  ccc-nano-drone.css  ccc-nano-drone.rst
Presentation/images/: HowToTrainYourDragon.xcf
Électronique/: .gitignore  Drone.pro  Drone.sch  sensors.lib
